# snake-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: defs.hpp  game.hpp  interface.hpp  snake.hpp
src/: game.cpp  interface.cpp  main.cpp  snake.cpp
